# PT1

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  quickstart.sh  requirements.txt
docs/: API.md
examples/: culture_example.py  protocol_example.py
src/pt1/: __init__.py  culture.py  protocol.py
tests/: test_culture.py  test_protocol.py
